<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controller nps</string>
    <string name="logs_catalog">ControllerUsbLogs</string>
    <string name="bins_catalog">ControllerUsbBins</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_about">About</string>
    <string name="title_tests">Tests</string>
    <string name="title_graph">Graph</string>
    <string name="usb_not_found">USB Device not found!</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="try_again">Try Again</string>
    <string name="usb_not_found_info">Cannot find supported USB devices. Check connection or application settings and try again start application</string>
    <string name="settings_changed">Settings Changed</string>
    <string name="settings_changed_info">Supported devices settings changed. Application restart required.</string>
    <string name="usb_disconnected">USB device disconnected</string>
    <string name="usb_disconnected_info">USB device has been disconnected. Application will be closed.</string>
    <string name="setup_usb">Setup USB device</string>
    <string name="service_name">nps usb service</string>
    <string name="local_service_notification">Usb service</string>
    <string name="local_service_started">NPS Usb service started</string>
    <string name="local_service_running">Service is avaiting for commands</string>
    <string name="local_service_test_started">Microcontrollers test started</string>
    <string name="local_service_test_done">Microcontrollers test done</string>
    <string name="local_service_testing">Testing</string>
    <string name="digital_io">Digital Inputs Outputs</string>
    <string name="digital_on1">On 1</string>
    <string name="digital_off1">Off 1</string>
    <string name="digital_on2">On 2</string>
    <string name="digital_off2">Off 2</string>
    <string name="digital_on3">On 3</string>
    <string name="digital_off3">Off 3</string>
    <string name="digital_on4">On 4</string>
    <string name="digital_off4">Off 4</string>
    <string name="analog_i">Analog Inputs</string>
    <string name="analog_i1">Input 1:</string>
    <string name="analog_i2">Input 2:</string>
    <string name="analog_i3">Input 3:</string>
    <string name="analog_i4">Input 4:</string>
    <string name="read">Read</string>
    <string name="system_info">Microcontroller System Info</string>
    <string name="software_version">Software version: </string>
    <string name="software_date_built">Date built: </string>
    <string name="software_author">Author: Norbert Pabian</string>
    <string name="repeats">Number of repeats</string>
    <string name="out_size">Out packet size</string>
    <string name="in_size">In packet size</string>
    <string name="arhitecture">Arhitecture</string>
    <string name="save_logs">Save speed logs to file</string>
    <string name="run">Run</string>
    <string name="select">Select</string>
    <string name="device">Devices</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="sequence">Sequences</string>
    <string name="selected_sequence">Selected (Hold and move to reorder)</string>
    <string name="thread">Thread Priority</string>
    <string name="normal_priority">Normal Priority</string>
    <string name="hi_java_priority">Hi Priority Java Based</string>
    <string name="hi_android_priority">Hi Priority Android Based</string>
    <string name="save_stream_data">Save stream data to file</string>
    <string name="simulate">Simulate Computations</string>
    <string name="extended_devices">Extended Devices Combination</string>
    <string name="fast_hub">Fast Usb Hub</string>
    <string name="status">Status: </string>
    <string name="internal">Internal Memory</string>
    <string name="external">External Memory</string>
    <string name="test_scenatios_title">Run following test scenatios</string>
    <string name="kill">Kill service</string>
    <string name="ready">Ready</string>
    <string name="memory">Logs</string>
    <string name="simulations">Simulations</string>
    <string name="simulations_info">Simulate coputations after each send/read USB data. Enter number of simulation loops (0 = off, 1 = 3ms, 2 = 6ms etc)</string>
    <string name="select_memory_unit">Select memory unit</string>
    <string name="buffer_size">Buffer Size</string>
    <string name="available_devices">Available (Tap to add to selected)</string>
    <string name="selected_devices">Selected (Tap to remove, hold and move to reorder)</string>
    <string name="ping">Ping</string>
    <string name="ping_device_title">Ping selected device</string>
    <string name="ping_device_info">Do you want ping device: %1$s ?</string>
    <string name="other">Other</string>
    <string name="time">Time</string>
    <string name="value">Value</string>
    <string name="analog_inputs">Analog Inputs</string>
    <string name="enabled">Enabled</string>
    <string name="stream_buffer">Stream Buffer/Queue Settings</string>
    <string name="disabled">Disabled</string>
    <string name="auto">Auto ~20MB</string>
    <string name="manual">Buffer Size * Queue Size</string>
    <string name="queue_size">Stream Queue Size</string>
    <string name="queue_capacity">Queue Size (size > 0)</string>
    <string name="auto_enable_graph">Auto Enable/Disable Graph</string>
    <string name="app_version">Controller nps 1.0.17</string>
    <string name="built_date">Built date: 20.02.2014</string>
    <string name="author">Author: Norbert Pabian</string>
    <string name="contact">Contact: norbert.pabian@gmail.com | www.npsoft.clanteam.com</string>
    <string name="about">App for testing communication between android device an microconrtollers SAM7-EX256 via USB connection. Microcontrolers require software developed by JAG.</string>
    
    <string name="pid">Product ID</string>
    <string name="vid">Vendor ID</string>
    <string name="pref_summary">List with supported device identifiers</string>
    <string name="pref_title">Devices Settings</string>
    <string name="pref_dev_predefined">Predefined Devices</string>
    <string name="pref_dev_custom">Custom Devices</string>
    <string name="atmel1_dev_title">Atmel (sam7)</string>
    <string name="atmel1_dev_summary">PID = 24870, VID = 1003</string>
    <string name="atmel2_dev_title">Atmel (sam3)</string>
    <string name="atmel2_dev_summary">PID = 24857, VID = 1003</string>
    <string name="stm_dev_title">STM</string>
    <string name="stm_dev_summary">PID = 25869, VID = 1003</string>
    <string name="custom1_dev_title">Custom 1</string>
    <string name="custom2_dev_title">Custom 2</string>
    <string name="custom3_dev_title">Custom 3</string>

</resources>
