<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textDigital_io"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/digital_io"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/toggleDigital1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/digital_off1"
                android:textOn="@string/digital_on1" />

            <ToggleButton
                android:id="@+id/toggleDigital2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/digital_off2"
                android:textOn="@string/digital_on2" />

            <ToggleButton
                android:id="@+id/toggleDigital3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/digital_off3"
                android:textOn="@string/digital_on3" />

            <ToggleButton
                android:id="@+id/toggleDigital4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/digital_off4"
                android:textOn="@string/digital_on4" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textAnalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/analog_i"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/analogRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/read" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/textAnalogIn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/analog_i1" />

            <TextView
                android:id="@+id/textAnalogInEdit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/textAnalogIn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/analog_i2" />

            <TextView
                android:id="@+id/textAnalogInEdit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/textAnalogIn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/analog_i3" />

            <TextView
                android:id="@+id/textAnalogInEdit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textAnalogIn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/analog_i4" />

            <TextView
                android:id="@+id/textAnalogInEdit4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textSystemInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/system_info"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textSoftwareVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/software_version" />

        <TextView
            android:id="@+id/textSoftwareDateBuilt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/software_date_built" />

        <TextView
            android:id="@+id/textSoftwareAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/software_author" />

    </LinearLayout>

</LinearLayout>
