<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/datailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/repeatsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeats" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/repeatsInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.47"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/setRepeatsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />
        </LinearLayout>

        <TextView
            android:id="@+id/outSizeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/out_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/packetOutSizeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.71"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/setOutSizeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />
        </LinearLayout>

        <TextView
            android:id="@+id/inSizeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/packetInSizeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.71"
                android:inputType="text"
                android:scrollbars = "horizontal" />

            <Button
                android:id="@+id/setInSizeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/deviceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/selectedDeviceText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.71"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:scrollbars = "vertical" />

            <Button
                android:id="@+id/selectDeviceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />
        </LinearLayout>

        <TextView
            android:id="@+id/architectureLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arhitecture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/selectedArchitectureText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.71"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:scrollbars = "vertical" />

            <Button
                android:id="@+id/selectArhitectureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <CheckBox
                android:id="@+id/saveLogsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_logs" />

            <Button
                android:id="@+id/runButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/run" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>